feat: done init category service
