# api-gateway/handler/category_handler.go
@@ -1,0 +1,96 @@
+package handler
+
+import (
+	"net/http"
+	"strconv"
+
+	"github.com/hariszaki17/library-management/api-gateway/config"
+	"github.com/hariszaki17/library-management/api-gateway/handler/dto"
+	"github.com/hariszaki17/library-management/api-gateway/handler/middleware"
+	"github.com/hariszaki17/library-management/api-gateway/helper"
+	"github.com/hariszaki17/library-management/proto/constants"
+	pb "github.com/hariszaki17/library-management/proto/gen/category/proto"
+	"github.com/hariszaki17/library-management/proto/logging"
+	"github.com/labstack/echo/v4"
+	"google.golang.org/grpc/metadata"
+
+	"github.com/sirupsen/logrus"
+)
+
+type CategoryHandler struct {
+	categoryRPC pb.CategoryServiceClient
+}
+
+func NewCategoryHandler(g *echo.Group, categoryRPC pb.CategoryServiceClient, authMiddleware echo.MiddlewareFunc) {
+	handler := &CategoryHandler{
+		categoryRPC: categoryRPC,
+	}
+
+	g.GET("", handler.GetCategories, authMiddleware)
+}
+
+// GetCategories godoc
+// @Summary Get a list of books
+// @Description Retrieve a paginated list of books from the gRPC service
+// @Tags Categories
+// @Accept json
+// @Produce json
+// @Param page query int true "Page number" default(1)
+// @Param limit query int true "Number of items per page" default(10)
+// @Param Authorization header string true "Bearer token" Example: Bearer xxx"
+// @Success 200 {object} dto.GetCategoriesResponse
+// @Failure 400 {object} dto.ErrorResponse
+// @Failure 500 {object} dto.ErrorResponse
+// @Router /categories [get]
+func (h *CategoryHandler) GetCategories(c echo.Context) error {
+	pageStr := c.QueryParam("page")
+	limitStr := c.QueryParam("limit")
+
+	requestID := middleware.GetRequestID(c)
+	userID := middleware.GetUserID(c)
+	logger := logging.Logger.WithField("requestID", requestID)
+
+	logger.WithFields(logrus.Fields{
+		"serviceName": config.Data.ServiceName,
+		"handler":     "GetCategories",
+		"userID":      userID,
+	}).Info("Fetching books")
+
+	page, err := strconv.ParseInt(pageStr, 10, 64)
+	if err != nil {
+		logger.WithError(err).Error("Invalid page")
+		return c.JSON(http.StatusBadRequest, dto.ErrorResponse{Message: "Invalid page"})
+	}
+
+	limit, err := strconv.ParseInt(limitStr, 10, 64)
+	if err != nil {
+		logger.WithError(err).Error("Invalid limit")
+		return c.JSON(http.StatusBadRequest, dto.ErrorResponse{Message: "Invalid limit"})
+	}
+
+	if err := helper.ValidatePageLimit(int(page), int(limit)); err != nil {
+		logger.WithError(err).Error("Invalid pagination")
+		return c.JSON(http.StatusBadRequest, dto.ErrorResponse{Message: err.Error()})
+	}
+
+	// Create gRPC context with metadata
+	md := metadata.Pairs(
+		constants.RequestIDKeyCtx, requestID,
+		constants.UserIDKeyCtx, userID)
+	grpcCtx := metadata.NewOutgoingContext(c.Request().Context(), md)
+
+	req := &pb.GetCategoriesRequest{Page: uint64(page), Limit: uint64(limit)}
+	resp, err := h.categoryRPC.GetCategories(grpcCtx, req)
+	if err != nil {
+		logger.WithError(err).Error("Failed to get books from gRPC server")
+		return c.JSON(http.StatusInternalServerError, dto.ErrorResponse{Message: "Internal server error"})
+	}
+
+	logger.WithFields(logrus.Fields{
+		"serviceName": config.Data.ServiceName,
+		"handler":     "GetCategories",
+		"userID":      userID,
+	}).Info("Successfully fetched books")
+
+	return c.JSON(http.StatusOK, dto.ToGetCategoriesResponse(resp.Categories))
+}
