# category-service/models/category.go
@@ -1,0 +1,10 @@
+package models
+
+import (
+	"gorm.io/gorm"
+)
+
+type Category struct {
+	gorm.Model
+	Name string `json:"name"`
+}
